logs/15_fame_effect_mvpa_4040217.txt
  File "fame_effect_class.py", line 69
    for mask in masks:
                     ^
SyntaxError: invalid syntax
